...
        android:backgroundTint="@color/colorPrimary"
        android:orientation="vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <!-- EditText for adding reminder -->
        <EditText
            android:id="@+id/reminder_title"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:gravity="top|left"
            android:hint="Reminder"
...
                </LinearLayout>

            </RelativeLayout>

            <!-- Button for "Done" -->
            <Button
                android:id="@+id/btn_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Done"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textSize="18sp" />
...
